--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -4,9 +4,13 @@ ipython>=7.31.1, <8.0
 isort~=5.0
 jupyter~=1.0
 jupyterlab~=3.0
-kedro==0.18.0
+kaggle
+kedro[pandas.CSVDataSet, pandas.ExcelDataSet, pandas.ParquetDataSet]==0.18.0
 kedro-telemetry~=0.2.0
+kedro-viz~=4.0; python_version < '3.9'
 nbstripout~=0.4
+pandas
+plotly
 pytest-cov~=3.0
 pytest-mock>=1.7.1, <2.0
 pytest~=6.2
