--- a/conf/base/logging.yml
+++ b/conf/base/logging.yml
@@ -51,5 +51,5 @@ loggers:
         propagate: no
 
 root:
-    level: INFO
+    level: DEBUG
     handlers: [console, info_file_handler, error_file_handler]
