feat: started mlflow integration

--- a/conf/base/parameters.yml
+++ b/conf/base/parameters.yml
@@ -2,6 +2,7 @@ train_test_split:
   random_state: 420
 
 model_options:
+  scoring_function: mse
   preprocess_params:
     drop_columns: 
       - LotFrontage # 18% na
