--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -8,6 +8,7 @@ kaggle
 kedro[pandas.CSVDataSet, pandas.ExcelDataSet, pandas.ParquetDataSet]==0.18.0
 kedro-telemetry~=0.2.0
 kedro-viz~=4.0; python_version < '3.9'
+mlflow
 nbstripout~=0.4
 pandas
 pre-commit
