--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,11 @@ multi_line_output = 3
 include_trailing_comma = true
 force_grid_wrap = 0
 use_parentheses = true
-line_length = 88
 known_third_party = "kedro"
+profile = 'black'
+
+[tool.black]
+line-length = 120
 
 [tool.pytest.ini_options]
 addopts = """
