--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -10,6 +10,7 @@ kedro-telemetry~=0.2.0
 kedro-viz~=4.0; python_version < '3.9'
 nbstripout~=0.4
 pandas
+pre-commit
 plotly
 pytest-cov~=3.0
 pytest-mock>=1.7.1, <2.0
