--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,16 +1,19 @@
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.2.0 # Use the ref you want to point at
-    hooks:
-      - id: trailing-whitespace
-      - id: check-byte-order-marker
-      - id: check-json
-      - id: check-yaml
-      - id: debug-statements
   - repo: https://github.com/ambv/black
     rev: 22.3.0
     hooks:
       - id: black
+
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.2.0 # Use the ref you want to point at
+    hooks:
+      - id: check-ast
+      - id: check-json
+      - id: check-yaml
+      - id: debug-statements
+      - id: fix-byte-order-marker
+      - id: trailing-whitespace
+
   - repo: https://github.com/PyCQA/flake8
     rev: 4.0.1
     hooks:
